sql/sql_sequence.cc
@@ -365,9 +365,14 @@ bool sequence_insert(THD *thd, LEX *lex, TABLE_LIST *org_table_list)
 
   seq->reserved_until= seq->start;
   error= seq->write_initial_sequence(table);
-
-  if (trans_commit_stmt(thd))
-    error= 1;
+  {
+    uint save_unsafe_rollback_flags=
+      thd->transaction.stmt.m_unsafe_rollback_flags;
+    if (trans_commit_stmt(thd))
+      error= 1;
+    thd->transaction.stmt.m_unsafe_rollback_flags=
+      save_unsafe_rollback_flags;
+  }
   if (trans_commit_implicit(thd))
     error= 1;
 
